Use larger border radius in content overlap fix

--- a/assets/styles/header.scss
+++ b/assets/styles/header.scss
@@ -153,7 +153,7 @@ nav {
 
 // Modal Content
 .modal-content {
-    border-radius: 10px;
+    border-radius: .4rem;
     background-color: #fefefe;
     padding: 0;
     width: 60%;
